--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-    <title>Aluraflix</title>
+    <title>KaueDanielFlix</title>
 </head>
 
 <body>
 
-    <header>ALURAFLIX</header>
+    <header>KaueDanielFlix</header>
 
     <section class="chamada">
         <div class="chamada-texto">
